@@ -23,4 +23,7 @@
 <string name="source_code_project">Source code project</string>
 <string name="thanks_for_purchasing">Thanks for purchasing!</string>
 <string name="buy_donate_version">Buy donate version</string>
+<!--  * Support Email Feedback -->
+<string name="email_using_custom_rom">Please indicate if you are using a custom rom.</string>
+<string name="email_do_not_edit_message">The following is useful information for the developer.  Please do not edit.</string>
 </resources>
